--- a/web/index.html
+++ b/web/index.html
@@ -68,9 +68,39 @@
 
 <!--        <button class="btn btn-outline-primary d-none" href="#" >카테고리 데이터 삽입</button>-->
 <!--        <button class="btn btn-outline-primary d-none" href="#" >모델 데이터 삽입</button>-->
-
+        <div class="alert alert-dark" role="alert">
+            <h4 class="alert-heading">Request</h4>
+            <hr>
+            <form>
+                <div class="form-group row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label">URL</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" value="http://localhost:8000/vehicles" readonly>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label">Method</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" value="GET" readonly>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="staticEmail" class="col-sm-2 col-form-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="staticEmail">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-dark">호출</button>
+            </form>
+        </div>
         <div class="alert alert-secondary" role="alert">
-            <h4 class="alert-heading">Result</h4>
+            <h4 class="alert-heading">Response</h4>
             <hr>
             <p class="mb-0 result">loading...</p>
         </div>
@@ -95,11 +125,11 @@
     </div>
 </main>
 
-<footer class="footer mt-auto py-3">
-    <div class="container">
-        <span class="text-muted">Powered by OSC Korea</span>
-    </div>
-</footer>
+<!--<footer class="footer mt-auto py-3">-->
+<!--    <div class="container">-->
+<!--        <span class="text-muted">Powered by OSC Korea</span>-->
+<!--    </div>-->
+<!--</footer>-->
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
